# wasm-go-component-example

./: 0-Clean.sh  1-TouchAll.sh  2-go-get-tool_wit-bindgen-go.sh  3-wkg-wit-build.sh  4-dump-docs-adder-wasm.sh  5-go-tool_wit-bindgen-go-gen.sh  6-tinygo-build.sh  7-dump-adder-wasm.sh  8-wasmtime-run.sh  README.md  go.mod-MIN  main.go
example-host/: Cargo.toml  RUN-IT.sh
example-host/src/: async_add.rs  sync_add.rs
wit/: componentWithClimport_wit  componentWoutClimport_wit
